# FABO

./: LICENSE  Makefile  README.md  README_2.md  pyproject.toml  requirements.txt
FABO/: FABO_main.ipynb
FABO/Pickle_Files/: 0.pkl  CoRE2019_1600000__seed_1400.pkl  CoRE2019_1600000__seed_1749.pkl  CoRE2019_1600000__seed_1931.pkl  CoRE2019_1600000__seed_2132.pkl  CoRE2019_1600000__seed_2142.pkl  CoRE2019_1600000__seed_2408.pkl  CoRE2019_1600000__seed_2897.pkl  feature_count_1
FABO/Pickle_Files/FABO_Band_Gap_HSE06__seed_1530/: Band_Gap_HSE06__seed_1530.pkl
FABO/Pickle_Files/FABO_Band_Gap_HSE06__seed_2615/: Band_Gap_HSE06__seed_2615.pkl
FABO/Pickle_Files/Fabo_core160/: 1.pkl  10.pkl  11.pkl  12.pkl  13.pkl  14.pkl  15.pkl  16.pkl  17.pkl  18.pkl  19.pkl  2.pkl  20.pkl  3.pkl  4.pkl  5.pkl  6.pkl  7.pkl  8.pkl  9.pkl
FABO/Pickle_Files/REMBO_core160/: 0.pkl  1.pkl  10.pkl  11.pkl  12.pkl  13.pkl  14.pkl  15.pkl  16.pkl  17.pkl  18.pkl  19.pkl  2.pkl  3.pkl  4.pkl  5.pkl  6.pkl  7.pkl  8.pkl  9.pkl
FABO/Pickle_Files/RF_core160/: 0.pkl  1.pkl  10.pkl  11.pkl  12.pkl  13.pkl  14.pkl  15.pkl  16.pkl  17.pkl  18.pkl  19.pkl  2.pkl  3.pkl  4.pkl  5.pkl  6.pkl  7.pkl  8.pkl  9.pkl
FABO/code/: bayesian_optimization_REMBO.py  bayesian_optimization_RF.py  bayesian_optimization_loop_EI.py  bayesian_optimization_loop_max_sigma.py  data_load.py  evaluate.py  feature_selection_funcs.py  plot_utils.py
FAMBO/: README.md
FAMBO/data/: compounds.csv
FAMBO/notebooks/: main.ipynb
FAMBO/src/: BO.py  feature_selection.py  sdl.py  search_space_init.py
(+1292 files in other folders)
